--- a/in-style.css
+++ b/in-style.css
@@ -1,6 +1,6 @@
 body {
   font-size: 18px !important;
-  background-color: #efe9d3 !important;
+  background-color: #eae9e7 !important;
 }
 
 body.bigBottomPad {
